more structure on objects

--- a/settings.json
+++ b/settings.json
@@ -3,6 +3,16 @@
     "id": "/",
     "type": "object",
     "properties": {
+        "difficulty": {
+            "id": "difficulty",
+            "type": "string",
+            "default": "medium",
+            "enum": [
+                "easy",
+                "medium",
+                "hard"
+            ]
+        },
         "show_hint": {
             "id": "show_hint",
             "type": "boolean",
