--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "otsimo-find-and-count",
+  "name": "otsimo-find-and-count-game",
   "version": "1.0.0",
-  "description": "",
+  "description": "Otsimo core game for number count and finding next games.",
   "repository": {
     "type": "git",
     "url": "git@github.com:otsimogames/core-find-and-count.git"
