--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "otsimo-find-and-count-game",
-  "version": "1.2.0",
+  "version": "1.2.3",
   "description": "Otsimo core game for number count and finding next games.",
   "repository": {
     "type": "git",
@@ -11,7 +11,7 @@
   "homepage": "https://github.com/otsimogames/core-find-and-count",
   "dependencies": {
     "otsimo": "^1.0.0",
-    "phaser": "~2.4.4",
+    "phaser": "^2.6.1",
     "sprintf-js": "^1.0.3"
   },
   "scripts": {
@@ -33,6 +33,7 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-json-minify": "^1.0.1",
     "gulp-replace": "^0.5.4",
+    "gulp-rev-all": "^0.8.22",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-usemin": "^0.3.16",
